# IRI

./: .gitignore  IRI-GUI - copia.py  IRI_GUI_complex.py  IRI_GUI_complex_v2.py  IRI_GUI_complex_v3.py  IRI_GUI_complex_vfinal.py  IRI_GUI_simple.py  README.md
Clasifier/: IC.py  IC3.py  IC4.py
classifier/: load.py  package-data-3-channels.py  package-data.py  package_data.py  prueba_redes_preentrenadas.py  train-model-functional-ordered.py  train-model-functional.py  train-model.py  train_model_functional_ordered.py
classifier/other_models/: package-data-3-channels.py  prueba_redes_preentrenadas.py  prueba_redes_preentrenadas_d4.py  train-model-3-d4.py  train-model-3.py
preprocessor/: CMakeLists.txt  Preprocessor.cpp  README.md  boxes-replace-select.txt
presentation/: IRI-GUI - copia.py  IRI-GUI.py
tensorflow/: Model2.py  model.py
